# senior-project-create-3D-model

./: calibration_func.py  findAruco.py  main.py  matching_func.py  model_func.py  pointcloud_func.py  pose_func.py  pyproject.toml  stereo.py
intrinsic/Test1/: K.npy  distortion.npy
intrinsic/calibrate with chess on com/: K.npy  distortion.npy
result_file/Chess Box/: mesh.ply  pointcloud.ply
result_file/New Chess Box/: mesh.ply  pointcloud.ply
result_file/Remote/: mesh.ply  pointcloud.ply
result_file/can 2/: mesh.ply  pointcloud.ply
result_file/food cover/: mesh.ply  pointcloud.ply
result_file/milk/: mesh.ply  pointcloud.ply
result_file/paint can/: mesh.ply  pointcloud.ply
result_file/paint2/: mesh.ply  pointcloud.ply
result_file/pen_case/: mesh.ply  pointcloud.ply
result_file/pillow/: mesh.ply  pointcloud.ply
result_file/tape/: mesh.ply  pointcloud.ply
result_file/umbrella/: mesh.ply  pointcloud.ply
