[tool.poetry]
name = "Senior Project"
version = "1.0"
description = ""
authors = ["numkhang <numkhang44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tk = "^0.1.0"
Pillow = "^9.4.0"
numpy = "^1.24.2"
opencv-python = "^4.7.0"
opencv-contrib-python = "^4.7.0"
open3d = "^0.17.0"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
